--- a/wheather/index.html
+++ b/wheather/index.html
@@ -13,7 +13,7 @@
         <button id="search-button">Search</button>
     </div>
     <div>
-        <h3 id="city-name">ranchi jahrkhand - India</h3>
+        <h3 class="cityname" id="city-name">ranchi jahrkhand - India</h3>
         <h6 id="city-time">locatime</h6>
         <p id="city-temp">30</p>
     </div>
